src/newUi.scss
/* ... */
th.sortable {
  cursor: pointer;
}

.timeseries-iframe {
  display: flex;
  height: 2300px;
  width: 100%;
  border: none;
}

.statistics-title {
  padding-top: 15px;
  padding-bottom: 20px;
}

.screen-status {
  padding-bottom: 20px;
}

.table-method-arguments tbody tr {
  background-color: transparent !important;
}

.source-code code {
  background-color: #f2f2f2;
}

.source-code pre {
  height: 100%;
}

.source-code {
  transition: all 1s ease;
  transition: all 1s ease;
  transition: all 1s ease;
  height: 0;
  opacity: 0;
}

.source-code.show {
  height: auto !important;
  opacity: 1 !important;
}

.type-span {
  color: var(--bold-text-color);
  padding: 4px 12px;
  border-radius: 100px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: fit-content;
  gap: 6px;
  font-family: 'San Francisco Pro', sans-serif;
  font-size: 12px;
  line-height: 20px;
}

.features-page-container {
  display: flex;
  flex-direction: column;
  gap: 24px;
  background-color: var(--secondary-color);
  margin: 16px 0;
}

.span-red-tag {
  background-color: var(--span-red-background);
  border: 1px solid var(--span-red-border);
}

.span-green-tag {
  background-color: var(--span-green-background);
  border: 1px solid var(--span-green-border);
}

.table-address {
  table-layout: inherit;
}

.summary-main-info {
  margin-top: 24px;
  background-color: var(--secondary-color);
  border: 1px solid var(--border-color);
  display: flex;
  flex-direction: column;
  gap: 24px;
  padding: 24px;
  font-size: 14px;
  border-radius: 8px;
}

.alter-background {
  background-color: var(--alter-background-color);
  border: 1px solid var(--alter-border-color);
}

.summary-main-info-container {
  display: flex;
  flex-direction: row;
  width: 480px;
  align-items: center;
}

.select-token-address {
  border: 1px solid var(--alter-border-color);
  background-color: var(--alter-background-color);
  color: var(--normal-text-color);
  border-radius: 8px;
  padding: 8px 9px;
}

.select-token-address:focus {
  background-color: var(--background-color);
}

.custom-select-container {
  position: relative;
}

.custom-select {
  width: 180px;
  border: 1px solid var(--alter-border-color);
  background-color: var(--dropdown-b);
  color: var(--normal-text-color);
  border-radius: 8px;
  padding: 8px 9px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  cursor: pointer;
}

.custom-select-options {
  position: absolute;
  background-color: var(--input-background);
  width: 100%;
  border-radius: 8px;
}

.custom-select-options ul {
  list-style: none;
  padding: 0;
  margin: 0;
  margin: 12px 0;
}

.custom-select-options ul li {
  padding: 6px 0;
  font-family: 'Mona Sans', sans-serif;
  color: var(--bold-text-color);
  font-size: 16px;
  font-weight: 500;
  line-height: 20px;
  text-align: center;
}

.drop-arrow-color {
  color: var(--bold-text-color);
  cursor: pointer;
}

.custom-select-options ul li:hover {
  background-color: var(--secondary-color);
}

.address-container-title {
  width: 100%;
  max-width: 120px;
  margin-right: 16px;
  color: var(--bold-text-color);
  text-transform: uppercase;
  font-size: 12px;
  font-weight: 700;
  line-height: 16px;
  letter-spacing: 0.03em;
  text-align: left;
}

.tr-features-details {
  width: 100%;
  border: none !important;
}

.summary-balance-info-container {
  word-break: break-word;
  font-family: 'San Francisco Pro', sans-serif;
  font-weight: 500;
  line-height: 20px;
  letter-spacing: 0.03em;
  text-align: left;
}

.token-option {
  background-color: var(--input-background);
}

.summary-container-title-purple {
  color: var(--purple-text);
}

.tx-id-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  font-size: 14px;
  gap: 16px;
}

.tx-title-purple {
  color: var(--purple-text);
  font-family: 'Mona Sans';
  text-transform: uppercase;
  font-weight: 700;
  line-height: 16px;
  letter-spacing: 0.03em;
  text-align: left;
  white-space: nowrap;
}

.tx-id-top {
  font-family: 'San Francisco Pro', sans-serif;
  white-space: wrap;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.03em;
  word-break: break-word;
  text-align: left;
}

.summary-balance-info {
  display: flex;
  flex-direction: column;
  gap: 24px;
  background-color: var(--secondary-color);
  border: 1px solid var(--border-color);
  border-radius: 8px;
  padding: 24px;
  margin: 16px 0;
}

.summary-balance-info-container {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.container-big-links {
  word-break: break-all;

  a {
    color: #8c46ff;
  }
}
/* ... */

